# Database-convertor

./: companies.csv  company_data.db
DatabaseConverter/: alembic.ini  api_clients.py  api_clients.py.backup  app.py  applicant_pipeline.py  applicant_processor.py  automation_monitoring.py  company_data.db  contact_enrichment.py  data_enrichment.py  database.py  database_new.py  database_sqlite_backup.py  db.py  debug_companies_house_api.py  debug_planning_api.py  debug_planning_links.py  free_proxy_manager.py  investigate_app_types.py  linkedin_scraper.py  migrate_data.py  models.py  persistent_cache.py  planning_portal_fix_summary.md  pyproject.toml  replit.md  requirements.txt  test_companies_house_fix.py  test_keyval.py  test_keyval_integration.py  test_linkcolumn.py  test_pipeline.py  test_search_fix.py  utils.py  webhook_handler.py  weekly_scheduler.py
DatabaseConverter/attached_assets/: Developer Database_1757143888296.xlsx  Lender (No Contact) — CLEANED v3_1758441394483.csv  Lender (No Contact) — CLEANED v3_1758448368748.csv  Lender (No Contact)_1758439932656.csv  Nimbus Maps - Planning Data (10) barnet_1757524975503.xlsx  Pasted-Exactly-the-trick-is-that-Barnet-and-most-Idox-portals-don-t-expose-a-neat-reference-URL-Inst-1757581154252_1757581154253.txt  Pasted-Hey-Lewis-short-answer-yes-But-the-field-you-want-planning-application-category-lives-on-the-1757449390441_1757449390442.txt  Pasted-let-BASIC-AUTH-VIA-DATA-SOURCE-SETTINGS-Base-https-api-company-informatio-1757146052742_1757146052743.txt  README_barnet_resolve_and_scrape_1757582776910.txt  (+4 more)
(+4 files in other folders)
