[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "flask>=3.1.2",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "trafilatura>=2.0.0",
]
